--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,11 @@
         </activity>
         <activity
             android:name=".activities.ComposeActivity"
-            android:label="@string/title_activity_compose">
+            android:label="@string/title_activity_compose" >
+        </activity>
+        <activity
+            android:name=".activities.ProfileActivity"
+            android:label="@string/title_activity_profile" >
         </activity>
     </application>
 
